# Zero-Copy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
examples/: basic_usage.py  sentence_transformers_example.py
python/zero_copy_search/: __init__.py
src/: distance.rs  hnsw.rs  lib.rs  vector_store.rs
tests/: test_basic.py
