[package]
name = "zero_copy"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero_copy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
ordered-float = "4.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 2
