[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zero-copy-search"
version = "0.1.0"
description = "High-performance zero-copy vector search engine using Rust and memory-mapped files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sentence-transformers>=2.0",
    "torch>=2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "zero_copy_search._zero_copy"
python-source = "python"
